Install nginx collection from ansible-galaxy

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Output Ansible version
         run: ansible --version
+
+      - name: Install nginx Ansible Galaxy Collection
+        run: ansible-galaxy collection install nginxinc.nginx_core:0.7.1
