--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,8 +25,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      # Upgrade to fix https://github.com/ansible/ansible/issues/77624 (Ubuntu 20.04)
+      - name: Upgrade Ubuntu
+        run: sudo apt-get update && sudo apt-get upgrade -y
+
       - name: Install Ansible Core
-        run: sudo apt-get update && sudo apt-get install -y ansible-core
+        run: sudo apt-get install -y ansible-core
 
       - name: Output Ansible version
         run: ansible --version
