--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - name: Lint
+        uses: ansible/ansible-lint-action@main
+        with:
+          targets: |
+            inventory.yaml
+            playbook.yaml
+            requirements.yaml
+
       # Upgrade to fix https://github.com/ansible/ansible/issues/77624 (Ubuntu 20.04)
       - name: Upgrade Ubuntu
         run: sudo apt-get update && sudo apt-get upgrade -y
